Úprava farebnej schémy

--- a/Zilina/index.html
+++ b/Zilina/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="sk">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/main.css">
-<link rel="icon" type="image/icon" href="obr/Znak_Zilina.svg">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="icon" type="image/x-icon" href="obr/Znak_Zilina.svg">
+  <title>Žilina</title>
 </head>
 <body>
 
-<div class="header">
-  <h1>Žilina</h1>
-</div>
+<header>
+  <table>
+    <tr>
+      <td><img src="obr/Znak_Zilina.svg" height="50vh"></td>
+      <td style="padding: 20%;"><h1>Žilina</h1></td>
+    </tr>
+  </table>
+  
+</header>
 
 <div class="row">
   <div class="col-3 col-s-3 menu">
     <ul>
-      <li>O meste</li>
+      <li>Mesto Žilina</li>
       <li>Doprava</li>
       <li>Príroda</li>
       <li>Stravovanie</li>
@@ -22,28 +30,25 @@
   </div>
 
   <div class="col-6 col-s-9">
-    <h1>O meste Žilina</h1>
-    <p>Žilina je krajské a okresné mesto na severnom Slovensku. Leží na sútoku riek Váh, Kysuca a Rajčanka. Počtom obyvateľov je Žilina štvrtým najväčším mestom na Slovensku. Je administratívnym, hospodárskym, dopravným a kultúrnym centrom severozápadného Slovenska, niekedy sa jej hovorí „perla na Váhu“. </p>
-    <p>Vďaka svojej polohe je Žilina oddávna križovatkou obchodných ciest. V Žiline sa stretávajú tri cesty medzinárodného významu E 50, E 75 a E 442. Dôležitú úlohu zohráva mestský okruh, na ktorý sa napájajú všetky hlavné ťahy a ktorý smeruje tranzitnú dopravu mimo centra mesta. Železničná doprava je v Žiline veľmi frekventovaná, čo spôsobuje križovanie železničných tratí E 42 a E 52, ktoré plnia funkciu medzinárodných magistrál. Železničná stanica Žilina sa nachádza na trase paneurópskeho koridoru č. 5 a najviac rýchlikov premáva na trati z Bratislavy do Košíc. Žilina využíva medzinárodné letisko pri Dolnom Hričove, ktoré bolo spustené do prevádzky v roku 1975. Mestská doprava bola zavedená v roku 1949 a v roku 1994 začala pravidelná trolejbusová premávka. 
+    <h1>Mesto Žilina</h1>
+    <p>Žilina je krajské a okresné mesto na severnom Slovensku. Leží na sútoku riek Váh, Kysuca a Rajčanka. Počtom 80 758 obyvateľov (poďľa údajov Znak_Zilina 28.02.2023) je Žilina štvrtým najväčším mestom na Slovensku.[4] Je administratívnym, hospodárskym, dopravným a kultúrnym centrom severozápadného Slovenska, </p>
   </div>
 
   <div class="col-3 col-s-12">
-    <div class="aside">
-      <h2>Čo?</h2>
+    <aside>
+      <h2>Čo</h2>
       <p>Žilina je krajské a okresné mesto na severnom Slovensku.</p>
       <h2>Kde?</h2>
-      <p>Leží na sútoku riek Váh, Kysuca a Rajčanka. </p>
-      <h2>Ako?</h2>
-      <p>Do žiliny sa možno dostať letecky, vlakom alebo po ceste</p>
-    </div>
+      <p>Žilina leží na sútoku riek Váh, Kysuca a Rajčanka.</p>
+      <h2>Kam?</h2>
+      <p>Významnou kultúrnou inštitúciou v meste Žilina je Mestské divadlo. V meste sa nachádza Dom umenia Fatra, kde sa konajú pravidelné hudobné podujatia. Považská galéria umenia vystavuje umelecké diela autorov z okolia Žiliny, ale aj zo zahraničia.</p>
+    </aside>
   </div>
 </div>
 
-<div class="footer">
-  <p>Zmenou okna prehliadača možno vidieť ako sa stránka prispôsobuje aktívnej ploche prehliadača.</p>
-</div>
+<footer>
+  <p>Zmeňte veľkosť okna prehliadača na overenie responzívneho správania stránky.</p>
+</footer>
 
 </body>
 </html>
-
-
