--- a/Zilina/html/Mesto_Zilina.html
+++ b/Zilina/html/Mesto_Zilina.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/icon" href="obr/Znak_Zilina.svg">
-    <title>Mesto Žilina</title>
+    <title>Žilina</title>
 </head>
 <body>
     
